--- a/src/app/shared/components/sort-container/sort-container.component.html
+++ b/src/app/shared/components/sort-container/sort-container.component.html
@@ -1,14 +1,14 @@
 <mat-radio-group class="radio-group" text-align="right">
-  <mat-radio-button class="radio-button" value="title" labelPosition="before">
+  <mat-radio-button class="radio-button" value="title" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byTitle' | translate }}
   </mat-radio-button>
-  <mat-radio-button class="radio-button" value="company" labelPosition="before">
+  <mat-radio-button class="radio-button" value="company" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byCompany' | translate }}
   </mat-radio-button>
-  <mat-radio-button class="radio-button" value="dateStart" labelPosition="before">
+  <mat-radio-button class="radio-button" value="dateStart" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byDateStart' | translate }}
   </mat-radio-button>
-  <mat-radio-button class="radio-button" value="dateEnd" labelPosition="before">
+  <mat-radio-button class="radio-button" value="dateEnd" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byDateEnd' | translate }}
   </mat-radio-button>
 </mat-radio-group>
