change translate for label sorting

--- a/src/app/features/home/pick/pick.component.html
+++ b/src/app/features/home/pick/pick.component.html
@@ -3,7 +3,7 @@
     <mat-tab label="{{ 'home.pick.labelFilter' | translate }}">
       <app-filter-container></app-filter-container>
     </mat-tab>
-    <mat-tab label="{{ 'home.pick.labelFilter' | translate }}">
+    <mat-tab label="{{ 'home.pick.labelSorting' | translate }}">
       <app-sort-container></app-sort-container>
     </mat-tab>
   </mat-tab-group>
