feat: open add-bonus-form by pencil button

--- a/src/app/features/add-bonus/add-bonus.component.html
+++ b/src/app/features/add-bonus/add-bonus.component.html
@@ -6,5 +6,6 @@
     [locations]="locations"
     [vendors]="vendors"
     [newVendor]="newVendor"
+    [bonusId]="bonusId"
   ></app-add-bonus-form>
 </div>
