change value for api

--- a/src/app/shared/components/sort-container/sort-container.component.html
+++ b/src/app/shared/components/sort-container/sort-container.component.html
@@ -1,25 +1,25 @@
 <mat-radio-group class="radio-group" text-align="right" (change)="radioChange($event)">
-  <mat-radio-button class="radio-button" value="title" labelPosition="before" color="primary">
+  <mat-radio-button class="radio-button" value="Title" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byTitle' | translate }}
   </mat-radio-button>
   <mat-radio-button
     class="radio-button"
-    value="company.name"
+    value="Company"
     labelPosition="before"
     color="primary"
   >
     {{ 'home.pick.sorting.byCompany' | translate }}
   </mat-radio-button>
-  <mat-radio-button class="radio-button" value="dateStart" labelPosition="before" color="primary">
+  <mat-radio-button class="radio-button" value="DateStart" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byDateStart' | translate }}
   </mat-radio-button>
-  <mat-radio-button class="radio-button" value="dateEnd" labelPosition="before" color="primary">
+  <mat-radio-button class="radio-button" value="DateEnd" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byDateEnd' | translate }}
   </mat-radio-button>
-  <mat-radio-button class="radio-button" value="rating" labelPosition="before" color="primary">
+  <mat-radio-button class="radio-button" value="Rating" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byRating' | translate }}
   </mat-radio-button>
-  <mat-radio-button class="radio-button" value="type" labelPosition="before" color="primary">
+  <mat-radio-button class="radio-button" value="Type" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byType' | translate }}
   </mat-radio-button>
 </mat-radio-group>
