--- a/src/app/shared/components/sort-container/sort-container.component.html
+++ b/src/app/shared/components/sort-container/sort-container.component.html
@@ -2,12 +2,7 @@
   <mat-radio-button class="radio-button" value="Title" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byTitle' | translate }}
   </mat-radio-button>
-  <mat-radio-button
-    class="radio-button"
-    value="Company"
-    labelPosition="before"
-    color="primary"
-  >
+  <mat-radio-button class="radio-button" value="Company" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byCompany' | translate }}
   </mat-radio-button>
   <mat-radio-button class="radio-button" value="DateStart" labelPosition="before" color="primary">
