--- a/src/app/shared/components/sort-container/sort-container.component.html
+++ b/src/app/shared/components/sort-container/sort-container.component.html
@@ -5,7 +5,7 @@
   <mat-radio-button class="radio-button" value="Company" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byCompany' | translate }}
   </mat-radio-button>
-  <mat-radio-button class="radio-button" value="DateStart" labelPosition="before" color="primary">
+  <mat-radio-button class="radio-button" value="DateStart" labelPosition="before" color="primary" data-test>
     {{ 'home.pick.sorting.byDateStart' | translate }}
   </mat-radio-button>
   <mat-radio-button class="radio-button" value="DateEnd" labelPosition="before" color="primary">
