run prettier, linter

--- a/src/app/shared/components/sort-container/sort-container.component.html
+++ b/src/app/shared/components/sort-container/sort-container.component.html
@@ -1,4 +1,9 @@
-<mat-radio-group class="radio-group" text-align="right" (change)="radioChange($event)"  data-test="radio-group">
+<mat-radio-group
+  class="radio-group"
+  text-align="right"
+  (change)="radioChange($event)"
+  data-test="radio-group"
+>
   <mat-radio-button class="radio-button" value="Title" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byTitle' | translate }}
   </mat-radio-button>
