hide sort by company name

--- a/src/app/shared/components/sort-container/sort-container.component.html
+++ b/src/app/shared/components/sort-container/sort-container.component.html
@@ -7,9 +7,10 @@
   <mat-radio-button class="radio-button" value="Title" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byTitle' | translate }}
   </mat-radio-button>
-  <mat-radio-button class="radio-button" value="Company" labelPosition="before" color="primary">
+  <!-- TODO: if logic for type companyName will be from backend -->
+  <!-- <mat-radio-button class="radio-button" value="Company" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byCompany' | translate }}
-  </mat-radio-button>
+  </mat-radio-button> -->
   <mat-radio-button class="radio-button" value="DateStart" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byDateStart' | translate }}
   </mat-radio-button>
