--- a/src/app/features/statistics/statistics.component.scss
+++ b/src/app/features/statistics/statistics.component.scss
@@ -9,3 +9,9 @@ th.mat-sort-header-sorted {
 .table-container {
   padding: 0 20px;
 }
+
+.statistics-flters {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
