change function in toastr, rewrite eslint config

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@ body {
 body {
   margin: 0;
 }
-.toastr-no-bonuses {
+.toast-no-bonuses {
   left: 50%;
   width: 300px;
   margin: 10px auto 0;
@@ -21,10 +21,10 @@ body {
   background-repeat: no-repeat;
   border: solid 2px #0082ca;
 }
-.toastr-no-bonuses-title {
+.toast-no-bonuses-title {
   padding: 10px 0 5px;
 }
-.toastr-no-bonuses-message {
+.toast-no-bonuses-message {
   padding: 20px 0;
   margin-bottom: 80px;
 }
