--- a/src/app/features/add-bonus/add-bonus.component.html
+++ b/src/app/features/add-bonus/add-bonus.component.html
@@ -1,14 +1,20 @@
-<div class="container">
-  <div *ngIf="!isFormActive">
-    <app-add-bonus-button (openForm)="openForm()"></app-add-bonus-button>
-    <app-bonus-list-view [bonuses]="bonuses"></app-bonus-list-view>
+  <div class="container">
+    <div *ngIf="!isFormActive">
+      <app-add-bonus-button (openForm)="openForm()"></app-add-bonus-button>
+      <div>
+        <app-bonus-list-view
+          [bonuses]="bonuses"
+          [onBonusButtonClick]="onBonusButtonClick"
+          class="bonus-list"
+        ></app-bonus-list-view>
+      </div>
+    </div>
+    <app-add-bonus-form
+      *ngIf="isFormActive"
+      [bonusFormConfig]="bonusFormConfig"
+      [locations]="locations"
+      [vendors]="vendors"
+      [newVendor]="newVendor"
+      [bonusId]="bonusId"
+    ></app-add-bonus-form>
   </div>
-  <app-add-bonus-form
-    *ngIf="isFormActive"
-    [bonusFormConfig]="bonusFormConfig"
-    [locations]="locations"
-    [vendors]="vendors"
-    [newVendor]="newVendor"
-    [bonusId]="bonusId"
-  ></app-add-bonus-form>
-</div>
