-move pencil (edit button) -check parent component in bonus

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,4 @@
 <app-map-container></app-map-container>
 <app-pick></app-pick>
-<app-bonus-list-container [onBonusButtonClick]="onBonusButtonClick"></app-bonus-list-container>
+<app-bonus-list-container></app-bonus-list-container>
 <router-outlet></router-outlet>
