--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
@@ -65,6 +65,8 @@
   font-size: 26px;
   font-weight: 500;
   float: right;
+  background-color: $theme-color;
+  color: white;
 }
 
 .button-container {
@@ -110,6 +112,36 @@
     position: fixed;
     z-index: -1;
     visibility: hidden;
+  }
+}
+
+.update-img {
+  height: 33px;
+  display: inline-block;
+  margin: auto 0;
+}
+
+.edit-button {
+  width: 187px;
+  height: 42px;
+  border: 1px solid $theme-color;
+  float: right;
+  padding: 0;
+  .edit-button-link {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-content: center;
+    font-size: 26px;
+    font-weight: 500;
+    text-decoration: none;
+    color: $theme-color;
+    span {
+      display: inline-block;
+      height: 33px;
+      margin: auto 0;
+    }
   }
 }
 
