--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
@@ -15,7 +15,7 @@
           <span class="tag" *ngFor="let tag of bonus.tags">{{ tag }}</span>
         </div>
       </div>
-      <button mat-flat-button class="edit-button" *ngIf="isParent['APP-ADD-BONUS']">
+      <button mat-flat-button class="edit-button" *ngIf="isParentBonuses">
         <a
           *ngIf="isModeratorOrAdmin"
           routerLink="/bonuses/{{ bonus.id }}"
@@ -26,13 +26,13 @@
           <span>Edit</span>
         </a>
       </button>
-      <div class="button-container" *ngIf="isParent['APP-HISTORY']">
+      <div class="button-container" *ngIf="isParentHistory">
         <button mat-flat-button class="apply-button" (click)="openRateForm()">
           <span>Rate</span>
         </button>
       </div>
-      <div class="button-container" *ngIf="isParent['APP-HOME']">
-        <button mat-flat-button class="apply-button" (click)="applyBonus()">
+      <div class="button-container" *ngIf="isParentHome">
+        <button mat-flat-button class="apply-button" (click)="openApplyForm()">
           <span>Apply</span>
         </button>
       </div>
