add min width for table

--- a/src/app/features/statistics/statistics.component.html
+++ b/src/app/features/statistics/statistics.component.html
@@ -46,7 +46,7 @@
     </button>
   </div>
 
-  <mat-table [dataSource]="dataSource" matSort>
+  <mat-table [dataSource]="dataSource" matSort class="table">
     <ng-container matColumnDef="companyName">
       <mat-header-cell *matHeaderCellDef mat-sort-header>
         {{ 'statistics.vendor' | translate }}
