--- a/src/app/shared/components/tags-input/tags-input.component.html
+++ b/src/app/shared/components/tags-input/tags-input.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="tag-chips-input">
-  <mat-label>Favorite Fruits</mat-label>
+  <mat-label>Tags</mat-label>
   <mat-chip-list #chipList aria-label="Fruit selection" aria-multiline="false">
     <mat-chip
       *ngFor="let tag of tags"
@@ -11,8 +11,8 @@
       <mat-icon matChipRemove *ngIf="true">cancel</mat-icon>
     </mat-chip>
     <input
-      placeholder="New fruit..."
-      #fruitInput
+      placeholder="New tags..."
+      #tagsInput
       [formControl]="tagsControl"
       [matAutocomplete]="auto"
       [matChipInputFor]="chipList"
@@ -22,7 +22,7 @@
     />
   </mat-chip-list>
   <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-    <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
+    <mat-option *ngFor="let fruit of filteredTags | async" [value]="fruit">
       {{ fruit }}
     </mat-option>
   </mat-autocomplete>
