remove city from query when it removed in input

--- a/src/app/shared/components/city-input/city-input.component.html
+++ b/src/app/shared/components/city-input/city-input.component.html
@@ -18,7 +18,7 @@
     matSuffix
     mat-icon-button
     aria-label="Clear"
-    (click)="cityInputControl.reset('')"
+    (click)="reset()"
   >
     <mat-icon>close</mat-icon>
   </button>
