--- a/src/app/features/statistics/statistics.component.scss
+++ b/src/app/features/statistics/statistics.component.scss
@@ -8,6 +8,10 @@ th.mat-sort-header-sorted {
 
 .table-container {
   padding: 0 20px;
+  width: 100%;
+  min-width: 700px;
+  overflow-x: scroll;
+  white-space: nowrap;
 }
 
 .filters-title {
@@ -22,6 +26,3 @@ th.mat-sort-header-sorted {
   width: 300px;
 }
 
-.table {
-  min-width: 660px;
-}
