--- a/src/app/features/add-bonus/bonus-searcher/bonus-searcher.component.html
+++ b/src/app/features/add-bonus/bonus-searcher/bonus-searcher.component.html
@@ -1,6 +1,6 @@
 <div class="bonus-searcher-container">
   <mat-form-field [formGroup]="searcher" appearance="fill" class="bonus-searcher-input">
-    <mat-label>Choose vendor name</mat-label>
+    <mat-label>{{'addBonus.searcher' | translate}}</mat-label>
     <input
       type="text"
       matInput
