--- a/src/app/shared/components/filter-container/filter-container.component.html
+++ b/src/app/shared/components/filter-container/filter-container.component.html
@@ -1,4 +1,4 @@
-<div class="filter-wraper">
+<div class="filter-wrapper">
   <app-tags-input (tagsChangedEvent)="tagsChanged($event)" class="filter-inputs"></app-tags-input>
   <app-city-input (changeCityEvent)="changeCity($event)" class="filter-inputs"></app-city-input>
   <app-datepicker (changeDate)="changeDate($event)" class="filter-inputs"></app-datepicker>
