--- a/src/app/shared/components/filter-container/filter-container.component.scss
+++ b/src/app/shared/components/filter-container/filter-container.component.scss
@@ -1,4 +1,4 @@
-.filter-wraper {
+.filter-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,5 +6,5 @@
 }
 
 .filter-inputs {
-  width: 300px;
+  width: 100%;
 }
