--- a/src/app/shared/components/sort-container/sort-container.component.html
+++ b/src/app/shared/components/sort-container/sort-container.component.html
@@ -1,4 +1,4 @@
-<mat-radio-group class="radio-group" text-align="right" (change)="radioChange($event)">
+<mat-radio-group class="radio-group" (change)="sortValueChange($event)" appResizePick="mobile">
   <mat-radio-button class="radio-button" value="Title" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byTitle' | translate }}
   </mat-radio-button>
@@ -18,3 +18,13 @@
     {{ 'home.pick.sorting.byType' | translate }}
   </mat-radio-button>
 </mat-radio-group>
+<mat-form-field appearance="fill" appResizePick="desktop" class="select-sort">
+<mat-select (selectionChange)="sortValueChange($event)">
+  <mat-option value="Title">{{ 'home.pick.sorting.byTitle' | translate }}</mat-option>
+  <mat-option value="Company">{{ 'home.pick.sorting.byCompany' | translate }}</mat-option>
+  <mat-option value="DateStart">{{ 'home.pick.sorting.byDateStart' | translate }}</mat-option>
+  <mat-option value="DateEnd">{{ 'home.pick.sorting.byDateEnd' | translate }}</mat-option>
+  <mat-option value="Rating">{{ 'home.pick.sorting.byRating' | translate }}</mat-option>
+  <mat-option value="Type">{{ 'home.pick.sorting.byType' | translate }}</mat-option>
+</mat-select>
+</mat-form-field>
