--- a/src/app/shared/components/sort-container/sort-container.component.html
+++ b/src/app/shared/components/sort-container/sort-container.component.html
@@ -3,8 +3,8 @@
   text-align="right"
   (change)="sortValueChange($event)"
   data-test="radio-group"
+  appResizePick="mobile"
 >
-<mat-radio-group class="radio-group" (change)="sortValueChange($event)" appResizePick="mobile">
   <mat-radio-button class="radio-button" value="Title" labelPosition="before" color="primary">
     {{ 'home.pick.sorting.byTitle' | translate }}
   </mat-radio-button>
@@ -22,7 +22,7 @@
   </mat-radio-button>
 </mat-radio-group>
 <mat-form-field appearance="fill" appResizePick="desktop" class="select-sort">
-<mat-select (selectionChange)="sortValueChange($event)">
+<mat-select (selectionChange)="sortValueChange($event)" class="sort-container">
   <mat-option value="Title">{{ 'home.pick.sorting.byTitle' | translate }}</mat-option>
   <mat-option value="Company">{{ 'home.pick.sorting.byCompany' | translate }}</mat-option>
   <mat-option value="DateStart">{{ 'home.pick.sorting.byDateStart' | translate }}</mat-option>
