add bonusButtonLabel property

--- a/src/app/shared/components/bonus-list-container/bonus-list-container.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus-list-container.component.html
@@ -1,5 +1,5 @@
 <app-bonus-list-view
   [bonuses]="bonuses"
-  [onBonusButtonClick]="onBonusButtonClick"
+  [bonusButtonLabel]="bonusButtonLabel"
   class="bonuses"
 ></app-bonus-list-view>
