--- a/src/app/shared/components/bonus-list-container/bonus-list-view/bonus-list-view.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus-list-view/bonus-list-view.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let bonus of bonuses; trackBy: trackById" class="bonus-container">
-  <app-bonus [bonus]="bonus" [bonusButtonClick]="onBonusButtonClick"></app-bonus>
+  <app-bonus [bonus]="bonus" [bonusButtonLabel]="bonusButtonLabel"></app-bonus>
 </div>
