--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -12,7 +12,11 @@
   <section class="left">
     <h1>Find place</h1>
     <div class="sort-header"><div>Sort: </div><app-sort-container class="sort-container"></app-sort-container></div>
-    <app-bonus-list-container [bonusButtonLabel]="bonusButtonLabel" class="bonus-list"></app-bonus-list-container>
+    <app-bonus-list-container
+      class="bonus-list"
+      [bonusButtonLabel]="bonusButtonLabel"
+      (bonusButtonClickedEvent)="openApplyForm($event)"
+    ></app-bonus-list-container>
   </section>
   <section class="right">
     <h2>Filter</h2>
