--- a/src/app/shared/components/bonus-list-container/bonus-list-container.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus-list-container.component.html
@@ -1,5 +1,6 @@
 <app-bonus-list-view
   [bonuses]="bonuses"
   [bonusButtonLabel]="bonusButtonLabel"
+  (bonusButtonClickedEvent)="bonusButtonClicked($event)"
   class="bonuses"
 ></app-bonus-list-view>
