--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div class="button-container">
-        <button mat-flat-button color="primary" class="apply-button" (click)="onBonusButtonClick()">
+        <button mat-flat-button color="primary" class="apply-button" (click)="bonusButtonClick()">
           <span>Button text</span>
         </button>
       </div>
