add condition, linter, prettier

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -11,8 +11,14 @@
   </div>
   <section class="left">
     <h1>Find place</h1>
-    <div class="sort-header"><div>Sort: </div><app-sort-container class="sort-container"></app-sort-container></div>
-    <app-bonus-list-container [onBonusButtonClick]="onBonusButtonClick" class="bonus-list"></app-bonus-list-container>
+    <div class="sort-header">
+      <div>Sort:</div>
+      <app-sort-container class="sort-container"></app-sort-container>
+    </div>
+    <app-bonus-list-container
+      [onBonusButtonClick]="onBonusButtonClick"
+      class="bonus-list"
+    ></app-bonus-list-container>
   </section>
   <section class="right">
     <h2>Filter</h2>
