--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
@@ -17,7 +17,7 @@
       </div>
       <div class="button-container">
         <button mat-flat-button color="primary" class="apply-button" (click)="bonusButtonClick()">
-          <span>Button text</span>
+          <span [innerHTML]="bonusButtonLabel"></span>
         </button>
       </div>
     </div>
