--- a/src/app/shared/components/filter-container/filter-container.component.scss
+++ b/src/app/shared/components/filter-container/filter-container.component.scss
@@ -3,8 +3,13 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  overflow-y: hidden;
+  height: 220px;
 }
 
 .filter-inputs {
-  width: 100%;
+  width: 90%;
+  &:first-child {
+    margin-top: 20px;
+  }
 }
