--- a/src/app/shared/components/sort-container/sort-container.component.scss
+++ b/src/app/shared/components/sort-container/sort-container.component.scss
@@ -2,11 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  width: 300px;
+  justify-content: center;
+  width: 90%;
   margin: 0 auto;
+  height: 200px;
+  overflow: hidden;
 
   .radio-button {
     margin: 5px;
+    font-size: 18px;
   }
 }
 
