add return(back) button to rate form

--- a/src/app/shared/components/rating/rate/rate.component.scss
+++ b/src/app/shared/components/rating/rate/rate.component.scss
@@ -84,3 +84,13 @@
     border-color: white;
   }
 }
+
+.buttons-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.rate-form-button {
+  width: 45%;
+  font-size: 18px;
+}
