do bonuses immutable

--- a/src/app/shared/components/bonus-list-container/bonus-list-container.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus-list-container.component.html
@@ -2,4 +2,5 @@
   [bonuses]="bonuses"
   [onBonusButtonClick]="onBonusButtonClick"
   class="bonuses"
+  [ifBonusFromMap]="ifBonusFromMap"
 ></app-bonus-list-view>
