--- a/src/app/features/add-bonus/add-bonus.component.html
+++ b/src/app/features/add-bonus/add-bonus.component.html
@@ -9,7 +9,8 @@
     <div>
       <app-bonus-list-view
         [bonuses]="bonuses"
-        [onBonusButtonClick]="onBonusButtonClick"
+        (bonusButtonClickedEvent)="openApplyForm($event)"
+        [bonusButtonLabel]="bonusButtonLabel"
         class="bonus-list"
       ></app-bonus-list-view>
     </div>
